--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-family: "Times New Roman", serif;
   background-color: #333;
   margin: 0 auto;
@@ -69,5 +69,58 @@ img {
   max-width: 300px;
   margin-top: 10px;
 
+} */
+
+
+h1 {
+  font-size: 24px;
+  margin: 10px 0;
+  text-transform: uppercase;
 }
 
+h2 {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+p {
+  margin: 10px 0;
+}
+
+ul {
+  margin: 10px 0;
+  padding: 0;
+}
+
+ul li {
+  list-style: none;
+  padding: 5px 0;
+}
+
+body {
+  background-color: #ddd;
+  font-family: sans-serif;
+  padding: 20px;
+  text-align: center;
+
+}
+
+#root {
+  background-color: white;
+  padding: 20px;
+}
+
+button {
+  background-color: #333;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+}
+
+img {
+  display: block;
+  margin: 20px auto;
+  width: 200px;
+}
